--- a/css/main.css
+++ b/css/main.css
@@ -298,18 +298,24 @@ body {
 
 .main-head {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   text-align: center;
+}
+
+@media screen and (width: 1200px) {
+  .main-head {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .social-networks {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 16px;
 }
 
 .social-networks-link {
@@ -623,6 +629,12 @@ body {
   padding-bottom: 94px;
 }
 
+@media screen and (max-width: 1199.5px) {
+  .doing {
+    display: none;
+  }
+}
+
 .doing-main-head {
   text-align: center;
   margin-bottom: 42px;
@@ -642,8 +654,13 @@ body {
 }
 
 .team-main-head {
-  text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-main-head {
+    margin-bottom: 50px;
+  }
 }
 
 .card-second-head {
@@ -651,8 +668,15 @@ body {
 }
 
 .card {
-  display: flex;
-  flex-wrap: wrap;
+  margin-bottom: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 
 .team-heading {
@@ -662,14 +686,28 @@ body {
 }
 
 .card-items {
-  flex-basis: calc(100% / 4 - 30px);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
-.card-items:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .card-items {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-items {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+  }
+}
+
+.card-items img {
+  width: 100%;
 }
 
 .card-second-head {
@@ -685,10 +723,17 @@ body {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  margin-bottom: 16px;
 }
 
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.cients-items {
+  flex-basis: calc(100% / 2 - 30px);
+  margin-right: 30px;
 }
 
 .clients-link {
@@ -711,10 +756,6 @@ body {
 .clients-link:focus {
   border: 1px var(--accent-color) solid;
   color: var(--accent-color);
-}
-
-.cients-items:not(:last-child) {
-  margin-right: 30px;
 }
 
 .clients-icon {
