--- a/sacc/components/_main-head.scss
+++ b/sacc/components/_main-head.scss
@@ -1,8 +1,12 @@
 .main-head {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   text-align: center;
+  @media screen and (width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
