--- a/sacc/layout/_clients.scss
+++ b/sacc/layout/_clients.scss
@@ -1,5 +1,10 @@
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
+}
+.cients-items {
+  flex-basis: calc(100% / 2 - 30px);
+  margin-right: 30px;
 }
 .clients-link {
   display: flex;
@@ -23,9 +28,9 @@
   }
 }
 
-.cients-items:not(:last-child) {
-  margin-right: 30px;
-}
+// .cients-items:not(:last-child) {
+//   margin-right: 30px;
+// }
 .clients-icon {
   width: 106px;
   height: 60px;
