--- a/sacc/layout/_our-team.scss
+++ b/sacc/layout/_our-team.scss
@@ -1,13 +1,20 @@
 .team-main-head {
-  text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 .card-second-head {
   margin-bottom: 10px;
 }
 .card {
-  display: flex;
-  flex-wrap: wrap;
+  margin-bottom: -30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 .team-heading {
   text-align: center;
@@ -15,15 +22,24 @@
   padding-bottom: 30px;
 }
 .card-items {
-  flex-basis: calc(100% / 4 - 30px);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  &:not(:last-child) {
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
     margin-right: 30px;
   }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-right: 30px;
+  }
+  img {
+    width: 100%;
+  }
 }
+
 .card-second-head {
   font-weight: 500;
   font-size: 16px;
@@ -36,4 +52,5 @@
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  margin-bottom: 16px;
 }
