--- a/css/main.css
+++ b/css/main.css
@@ -495,22 +495,21 @@ body {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-img.jpg");
-  max-width: 1600px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/Header-mob-min.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .hero-title {
-  width: 695px;
+  width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
 }
 
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -729,11 +728,32 @@ body {
 .clients-list {
   display: flex;
   flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    flex-wrap: nowrap;
+  }
 }
 
 .cients-items {
   flex-basis: calc(100% / 2 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .cients-items {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .cients-items :not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients-link {
@@ -741,7 +761,7 @@ body {
   align-items: center;
   justify-content: space-around;
   color: #afb1b8;
-  width: 172px;
+  width: 100%;
   height: 92px;
   border: 1px #afb1b8 solid;
   transition: color var(--transition-duration) var(--main-cubic), background-color var(--transition-duration) var(--main-cubic);
@@ -756,6 +776,24 @@ body {
 .clients-link:focus {
   border: 1px var(--accent-color) solid;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .clients-link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-link {
+    width: 170px;
+  }
 }
 
 .clients-icon {
