--- a/sacc/layout/_clients.scss
+++ b/sacc/layout/_clients.scss
@@ -1,17 +1,31 @@
 .clients-list {
   display: flex;
   flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 .cients-items {
   flex-basis: calc(100% / 2 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+  @media screen and (min-width: 1200px) {
+    :not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 .clients-link {
   display: flex;
   align-items: center;
   justify-content: space-around;
   color: #afb1b8;
-  width: 172px;
+  width: 100%;
   height: 92px;
   border: 1px #afb1b8 solid;
   transition: color var(--transition-duration) var(--main-cubic),
@@ -26,11 +40,16 @@
     border: 1px var(--accent-color) solid;
     color: var(--accent-color);
   }
+  @media screen and (min-width: 480px) {
+    width: 210px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 }
-
-// .cients-items:not(:last-child) {
-//   margin-right: 30px;
-// }
 .clients-icon {
   width: 106px;
   height: 60px;
