--- a/sacc/layout/_hero.scss
+++ b/sacc/layout/_hero.scss
@@ -10,21 +10,21 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/hero-img.jpg");
-  max-width: 1600px;
+    url("../../images/Header-mob-min.jpg");
+  // max-width: 1600px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .hero-title {
-  width: 695px;
+  width: 360px;
   margin: 0 auto;
 
   margin-bottom: 30px;
 }
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
