--- a/sacc/components/_modal.scss
+++ b/sacc/components/_modal.scss
@@ -13,8 +13,8 @@
   transition: transform 1000ms;
 }
 .modal {
-  width: 530px;
-  min-height: 580px;
+  // width: 530px;
+  height: 609px;
   background-color: #ffffff;
   border-radius: 4px;
   position: absolute;
@@ -24,6 +24,16 @@
   transition: transform 1000ms;
   transform: translate(-50%, -50%);
   padding: 40px;
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal-title {
   font-weight: 700;
