--- a/sacc/layout/_hero.scss
+++ b/sacc/layout/_hero.scss
@@ -1,34 +1,101 @@
 .hero {
   background-color: #c4c4c4;
-  max-width: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  max-width: 100%;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 .hero {
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../../images/Header-mob-min.jpg");
-  // max-width: 1600px;
+    url("../images/Header-mob-min.jpg");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 100%;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../images/Header-mob-2x-min.jpg");
+  }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../images/Header-tab-min.jpg");
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../../images/Header-tab-2x-min.jpg");
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../images/hero-img.jpg");
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../../images/hero-img-2x-min.jpg");
+    }
+  }
 }
 .hero-title {
-  width: 360px;
+  width: 100%;
   margin: 0 auto;
-
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  @media screen and (min-width: 480px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 360px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 695px;
+  }
 }
+
 .hero-title {
   font-weight: 900;
-  font-size: 26px;
+  font-size: 15px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+  @media screen and (min-width: 480px) {
+    font-size: 26px;
+    line-height: 1.6;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 .hero-button {
   font-style: normal;
