--- a/css/main.css
+++ b/css/main.css
@@ -369,35 +369,54 @@ body {
 }
 
 .header-list {
-  display: flex;
+  display: none;
 }
 
-.header-navigation {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .header-list {
+    display: flex;
+  }
 }
 
-.header-container {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .header-navigation {
+    display: flex;
+    align-items: center;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .header-contacts {
-  display: flex;
+  display: none;
 }
 
-.header-contacts {
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    display: flex;
+    margin-left: auto;
+  }
 }
 
-.header-link-logo {
-  margin-right: 90px;
+@media screen and (min-width: 768px) {
+  .header-link-logo {
+    margin-right: 90px;
+  }
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .header-link-logo {
@@ -414,8 +433,8 @@ body {
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
@@ -467,10 +486,6 @@ body {
   color: var(--accent-color);
 }
 
-.header-contacts-connect:not(:last-child) {
-  margin-right: 50px;
-}
-
 .header-contacts-mail-icon {
   width: 16px;
   height: 12px;
@@ -502,6 +517,123 @@ body {
   height: 16px;
   fill: currentColor;
   margin-right: 10px;
+}
+
+.menu-open-icon {
+  transition: fill var(--transition-duration) var(--main-cubic);
+}
+
+.menu-open-icon:hover, .menu-open-icon:focus {
+  fill: var(--accent-color);
+}
+
+.menu-open-btn {
+  background-color: transparent;
+  color: transparent;
+  position: absolute;
+  border: none;
+  top: 10px;
+  right: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: #fff;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-close-btn {
+  background-color: transparent;
+  color: transparent;
+  position: absolute;
+  border: none;
+  top: 10px;
+  right: 15px;
+}
+
+.menu-close-icon {
+  transition: fill var(--transition-duration) var(--main-cubic);
+}
+
+.menu-close-icon:hover, .menu-close-icon:focus {
+  fill: var(--accent-color);
+}
+
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts-connect:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts-tell,
+.mob-menu-contacts-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+
+.mob-menu-contacts-tell:hover, .mob-menu-contacts-tell:focus,
+.mob-menu-contacts-mail:hover,
+.mob-menu-contacts-mail:focus {
+  color: var(--accent-color);
+}
+
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+
+.mob-menu-link:hover, .mob-menu-link:focus {
+  color: var(--accent-color);
+}
+
+.menu-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+
+.menu-social-link:hover, .menu-social-link:focus {
+  color: var(--accent-color);
+}
+
+.menu-social {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 64px;
+  padding-right: 84px;
 }
 
 .hero {
