--- a/sacc/layout/_header.scss
+++ b/sacc/layout/_header.scss
@@ -1,27 +1,44 @@
 .header-list {
-  display: flex;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
-.header-navigation {
-  display: flex;
-  align-items: center;
+// ----------Decstop----------
+@media screen and (min-width: 768px) {
+  .header-navigation {
+    display: flex;
+    align-items: center;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
 }
-.header-container {
-  display: flex;
-  align-items: center;
-}
+
 .header-contacts {
-  display: flex;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: auto;
+  }
 }
-.header-contacts {
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .header-link-logo {
+    margin-right: 90px;
+  }
 }
-.header-link-logo {
-  margin-right: 90px;
-}
+
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  //  -------mobile-------------
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
+  // ----------Decstop----------
+  @media screen and (min-width: 768px) {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .header-link-logo {
@@ -37,10 +54,14 @@
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  //  -------mobile-------------
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+  // ----------Decstop----------
+  // font-size: 26px;
+  // line-height: 1.19;
 }
 .header-link {
   font-weight: 500;
@@ -85,9 +106,9 @@
     color: var(--accent-color);
   }
 }
-.header-contacts-connect:not(:last-child) {
-  margin-right: 50px;
-}
+// .header-contacts-connect:not(:last-child) {
+//   margin-right: 50px;
+// }
 
 .header-contacts-mail-icon {
   width: 16px;
@@ -119,4 +140,109 @@
   height: 16px;
   fill: currentColor;
   margin-right: 10px;
+}
+// _______________________________________________Monile menu________________________________________
+.menu-open-icon {
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+  transition: fill var(--transition-duration) var(--main-cubic);
+}
+.menu-open-btn {
+  background-color: transparent;
+  color: transparent;
+  position: absolute;
+  border: none;
+  top: 10px;
+  right: 15px;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.mob-menu {
+  position: fixed;
+  background-color: #fff;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.menu-close-btn {
+  background-color: transparent;
+  color: transparent;
+  position: absolute;
+  border: none;
+  top: 10px;
+  right: 15px;
+}
+.menu-close-icon {
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+  transition: fill var(--transition-duration) var(--main-cubic);
+}
+.mob-menu-item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+.mob-menu-contacts-connect {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+.mob-menu-contacts-tell,
+.mob-menu-contacts-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+.menu-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+  transition: color var(--transition-duration) var(--main-cubic);
+}
+.menu-social {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 64px;
+  padding-right: 84px;
 }
