--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ body {
   }
 }
 
-.header-contacts-connect {
+.header-contacts-connect:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -772,6 +772,8 @@ menu________________________________________
   .advantages-list {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -30px;
+    margin-top: -30px;
   }
 }
 
@@ -782,19 +784,34 @@ menu________________________________________
   }
 }
 
-.advantages-items:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    margin-right: -30px;
+    margin-top: -30px;
+  }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 480px) {
   .advantages-items:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .advantages-items {
     flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-items {
+    margin-top: 0;
+    margin-right: 0;
+  }
+  .advantages-items:not(:last-child) {
+    margin-right: 30px;
   }
 }
 
@@ -902,14 +919,11 @@ menu________________________________________
   margin-bottom: 10px;
 }
 
-.card {
-  margin-bottom: -30px;
-}
-
 @media screen and (min-width: 768px) {
   .card {
     display: flex;
     flex-wrap: wrap;
+    margin-top: -30px;
     margin-right: -30px;
   }
 }
@@ -924,19 +938,28 @@ menu________________________________________
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 480px) {
+  .card-items:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .card-items {
     flex-basis: calc(100% / 2 - 30px);
     margin-right: 30px;
+    margin-top: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .card-items {
     flex-basis: calc(100% / 4 - 30px);
+    margin-right: 0;
+  }
+  .card-items:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -964,8 +987,13 @@ menu________________________________________
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199.5px) {
+  .clients-list {
+    margin-right: -30px;
+    margin-top: -30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -974,20 +1002,22 @@ menu________________________________________
   }
 }
 
-.cients-items {
-  flex-basis: calc(100% / 2 - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (min-width: 480px) and (max-width: 1199.5px) {
+  .cients-items {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-top: 30px;
+  }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
   .cients-items {
     flex-basis: calc(100% / 3 - 30px);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .cients-items :not(:last-child) {
+  .cients-items:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -1064,7 +1094,7 @@ menu________________________________________
   color: #ffffff;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .fotter-join-title {
     text-align: center;
   }
@@ -1112,12 +1142,15 @@ menu________________________________________
   padding-top: 60px;
 }
 
+@media screen and (max-width: 480px) {
+  .footer-container-studio {
+    margin-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-contacts {
     text-align: center;
-  }
-  .footer-contacts:last-child {
-    margin-bottom: 60px;
   }
 }
 
@@ -1131,6 +1164,12 @@ menu________________________________________
     align-items: baseline;
     justify-content: space-around;
     margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .footer-nav-container {
+    margin-bottom: 0;
   }
 }
 
@@ -1338,7 +1377,7 @@ menu________________________________________
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 480px) {
   .portfolio-list-item:not(:last-child) {
     margin-bottom: 30px;
   }
