--- a/sacc/layout/_assets.scss
+++ b/sacc/layout/_assets.scss
@@ -2,22 +2,38 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -30px;
+    margin-top: -30px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: nowrap;
   }
 }
-
-.advantages-items:not(:last-child) {
-  margin-bottom: 30px;
+.advantages-list {
   @media screen and (min-width: 768px) {
-    margin-right: 30px;
+    margin-right: -30px;
+    margin-top: -30px;
   }
 }
+.advantages-items:not(:last-child) {
+  @media screen and (max-width: 480px) {
+    margin-bottom: 30px;
+  }
+}
+
 .advantages-items {
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+    margin-top: 0;
+    margin-right: 0;
   }
 }
 .advantages-head {
