--- a/sacc/layout/_clients.scss
+++ b/sacc/layout/_clients.scss
@@ -1,21 +1,25 @@
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  @media screen and (min-width: 480px) and (max-width: 1199.5px) {
+    margin-right: -30px;
+    margin-top: -30px;
+  }
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
   }
 }
 .cients-items {
-  flex-basis: calc(100% / 2 - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) and (max-width: 1199.5px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199.5px) {
     flex-basis: calc(100% / 3 - 30px);
   }
   @media screen and (min-width: 1200px) {
-    :not(:last-child) {
+    &:not(:last-child) {
       margin-right: 30px;
     }
   }
