--- a/sacc/layout/_footer.scss
+++ b/sacc/layout/_footer.scss
@@ -16,7 +16,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  @media screen and (min-width: 320px) and (max-width: 767px) {
+  @media screen and (min-width: 320px) and (max-width: 768px) {
     text-align: center;
   }
 }
@@ -57,12 +57,14 @@
   padding-bottom: 60px;
   padding-top: 60px;
 }
+.footer-container-studio {
+  @media screen and (max-width: 480px) {
+    margin-bottom: 60px;
+  }
+}
 .footer-contacts {
   @media screen and (min-width: 320px) and (max-width: 767px) {
     text-align: center;
-    &:last-child {
-      margin-bottom: 60px;
-    }
   }
 }
 .footer-contacts:not(:last-child) {
@@ -74,6 +76,9 @@
     align-items: baseline;
     justify-content: space-around;
     margin-bottom: 60px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
   }
 }
 .footer-link {
