--- a/sacc/layout/_header.scss
+++ b/sacc/layout/_header.scss
@@ -55,7 +55,9 @@
 }
 
 .header-contacts-connect {
-  margin-bottom: 10px;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
     &:not(:last-child) {
