--- a/sacc/layout/_our-team.scss
+++ b/sacc/layout/_our-team.scss
@@ -8,11 +8,10 @@
   margin-bottom: 10px;
 }
 .card {
-  margin-bottom: -30px;
-
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-top: -30px;
     margin-right: -30px;
   }
 }
@@ -26,14 +25,23 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-bottom: 30px;
+  @media screen and (max-width: 480px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
     margin-right: 30px;
+    margin-top: 30px;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 4 - 30px);
-    margin-right: 30px;
+    margin-right: 0;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
   img {
     width: 100%;
