--- a/sacc/layout/_portfolio.scss
+++ b/sacc/layout/_portfolio.scss
@@ -44,7 +44,7 @@
   }
 }
 .portfolio-list-item {
-  @media screen and (min-width: 320px) {
+  @media screen and (max-width: 480px) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
