--- a/sacc/layout/_assets.scss
+++ b/sacc/layout/_assets.scss
@@ -2,7 +2,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-top: -30px;
   }
   @media screen and (min-width: 1200px) {
@@ -12,12 +12,12 @@
 }
 .advantages-list {
   @media screen and (min-width: 768px) {
-    margin-right: -30px;
+    margin-left: -30px;
     margin-top: -30px;
   }
 }
 .advantages-items:not(:last-child) {
-  @media screen and (max-width: 480px) {
+  @media screen and (min-width: 480px) and (max-width: 767.5px) {
     margin-bottom: 30px;
   }
 }
@@ -26,14 +26,14 @@
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
     margin-top: 30px;
-    margin-right: 30px;
+    margin-left: 30px;
   }
   @media screen and (min-width: 1200px) {
     &:not(:last-child) {
       margin-right: 30px;
     }
     margin-top: 0;
-    margin-right: 0;
+    margin-left: 0;
   }
 }
 .advantages-head {
@@ -58,7 +58,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
-  @media screen and (max-width: 480px) {
+  @media screen and (min-width: 480px) and (max-width: 767.5px) {
     text-align: center;
   }
 }
