--- a/sacc/layout/_clients.scss
+++ b/sacc/layout/_clients.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   @media screen and (min-width: 480px) and (max-width: 1199.5px) {
-    margin-right: -30px;
+    margin-left: -30px;
     margin-top: -30px;
   }
   @media screen and (min-width: 1200px) {
@@ -12,7 +12,7 @@
 .cients-items {
   @media screen and (min-width: 480px) and (max-width: 1199.5px) {
     flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-top: 30px;
   }
   @media screen and (min-width: 768px) and (max-width: 1199.5px) {
