--- a/sacc/layout/_footer.scss
+++ b/sacc/layout/_footer.scss
@@ -58,7 +58,7 @@
   padding-top: 60px;
 }
 .footer-container-studio {
-  @media screen and (max-width: 480px) {
+  @media screen and (min-width: 480px) and (max-width: 767.5px) {
     margin-bottom: 60px;
   }
 }
