--- a/sacc/layout/_our-team.scss
+++ b/sacc/layout/_our-team.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: -30px;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 .team-heading {
@@ -25,7 +25,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  @media screen and (max-width: 480px) {
+  @media screen and (min-width: 480px) and (max-width: 767.5px) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -33,7 +33,7 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    margin-left: 30px;
     margin-top: 30px;
   }
   @media screen and (min-width: 1200px) {
